--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -11,17 +11,22 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@types/js-cookie": "^3.0.1",
     "axios": "^0.25.0",
     "currency-symbol-map": "^5.0.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "immer": "^9.0.12",
+    "js-cookie": "^3.0.1",
     "next": "^12.1.4",
+    "query-string": "^7.1.1",
     "react": "17.0.2",
+    "react-day-picker": "7.4.8",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-query": "^3.34.19",
     "sweetalert2": "^11.4.8",
+    "use-onclickoutside": "^0.4.0",
     "zod": "^3.14.3",
     "zustand": "^3.7.1"
   },
