--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "immer": "^9.0.12",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "next": "^12.1.4",
     "query-string": "^7.1.1",
     "react": "17.0.2",
