--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@hookform/resolvers": "^2.9.7",
     "@types/js-cookie": "^3.0.1",
     "axios": "^0.25.0",
     "currency-symbol-map": "^5.0.1",
