--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@hookform/resolvers": "^2.9.7",
+    "@mui/material": "^5.10.1",
     "@types/js-cookie": "^3.0.1",
     "axios": "^0.25.0",
     "currency-symbol-map": "^5.0.1",
