--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ yarn-error.log*
 .idea/pfa-next.iml
 .idea/vcs.xml
 .idea/inspectionProfiles/Project_Default.xml
+
+pfabackenddrf/.idea
+pfabackenddrf/pfabackenddrf/__pycache__/
