--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -47,5 +47,6 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
