--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "export": "next build && next export",
+    "deploy-kimsufi": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
