--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "mysql2": "^3.2.0",
     "nan": "^2.15.0",
     "prisma": "^4.8.0",
     "sib-api-v3-sdk": "^8.5.0",
