--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mysql2": "^3.2.0",
     "nan": "^2.15.0",
     "prisma": "^4.8.0",
+    "sharp-m1": "npm:sharp@^0.32.0",
     "sib-api-v3-sdk": "^8.5.0",
     "ssh2": "^1.6.0",
     "uuid": "^8.3.2"
@@ -59,5 +60,8 @@
   "devDependencies": {
     "eslint": "^8.8.0",
     "nodemon": "^2.0.15"
+  },
+  "optionalDependencies": {
+    "sharp-prod": "npm:sharp@^0.27.2"
   }
 }
