--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
     "bcryptjs": "^2.4.3",
+    "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.7.0",
     "generate-password": "^1.7.0",
     "helmet": "^5.0.2",
     "http-errors": "^2.0.0",
