--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -24,6 +24,7 @@
     "immer": "^9.0.12",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
+    "math-expression-evaluator": "^2.0.5",
     "next": "^12.1.4",
     "query-string": "^7.1.1",
     "react": "17.0.2",
@@ -31,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.34.19",
+    "recharts": "^2.12.6",
     "sweetalert2": "^11.4.14",
     "use-onclickoutside": "^0.4.0",
     "zod": "^3.14.3",
