--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -32,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.34.19",
+    "react-select": "^5.8.0",
     "recharts": "^2.12.6",
     "sweetalert2": "^11.4.14",
     "use-onclickoutside": "^0.4.0",
