--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@hookform/resolvers": "^2.9.7",
     "@mui/material": "^5.10.1",
     "@types/js-cookie": "^3.0.1",
@@ -25,11 +26,11 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "math-expression-evaluator": "^2.0.5",
-    "next": "^12.1.4",
+    "next": "^13.5.11",
     "query-string": "^7.1.1",
-    "react": "17.0.2",
+    "react": "19.2.0",
     "react-day-picker": "7.4.8",
-    "react-dom": "17.0.2",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.34.19",
     "react-select": "^5.8.0",
@@ -40,11 +41,13 @@
     "zustand": "^3.7.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@types/node": "17.0.14",
-    "@types/react": "17.0.39",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.4",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
+    "eslint-config-next": "13.5.11",
     "postcss": "^8.4.12",
     "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
