--- a/pfa-client-next/package.json
+++ b/pfa-client-next/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "deploy-kimsufi": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -26,7 +26,7 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "math-expression-evaluator": "^2.0.5",
-    "next": "^13.5.11",
+    "next": "16.0.1",
     "query-string": "^7.1.1",
     "react": "19.2.0",
     "react-day-picker": "7.4.8",
@@ -44,15 +44,21 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@types/node": "17.0.14",
     "@types/react": "19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react-dom": "19.2.2",
     "autoprefixer": "^10.4.4",
-    "eslint": "8.8.0",
-    "eslint-config-next": "13.5.11",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1",
     "postcss": "^8.4.12",
     "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.5.5"
+    "typescript": "5.9.3"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
+  }
 }
