--- a/front/package.json
+++ b/front/package.json
@@ -26,11 +26,11 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "math-expression-evaluator": "^2.0.5",
-    "next": "16.0.10",
+    "next": "16.1.0",
     "query-string": "^7.1.1",
-    "react": "19.2.0",
+    "react": "19.2.3",
     "react-day-picker": "7.4.8",
-    "react-dom": "19.2.0",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.66.0",
     "react-query": "^3.34.19",
     "react-select": "^5.8.0",
@@ -42,9 +42,9 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
-    "@types/node": "17.0.14",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
@@ -54,11 +54,5 @@
     "tailwindcss": "^3.0.23",
     "typescript": "5.9.3"
   },
-  "proxy": "http://localhost:5000",
-  "pnpm": {
-    "overrides": {
-      "@types/react": "19.2.2",
-      "@types/react-dom": "19.2.2"
-    }
-  }
+  "proxy": "http://localhost:5000"
 }
